# tasc_drive

./: .gitignore  README.md
drive_bringup/: package.xml  setup.py
drive_bringup/launch/: giskard_bringup.launch.py  teleop.launch.py
drive_control/: package.xml  setup.py
drive_control/drive_control/: motor_position_publisher.py
drive_control/llm_drive_control/: asimov_json_arr.gbnf  llama_cpp_script.py  llm_drive_node.py
drive_description/: CMakeLists.txt  package.xml
drive_description/description/: phidgets_giskard.urdf.xacro
drive_description/rviz/: drive_model.rviz
phidgets_hardware/: CMakeLists.txt  package.xml  phidgets_hardware_plugin.xml
phidgets_hardware/config/: ros2_control_controllers.yaml
phidgets_hardware/description/: phidgets_single_motor.urdf.xacro
phidgets_hardware/include/phidgets_hardware/: phidgets_bldc_hardware.hpp
phidgets_hardware/launch/: bringup_single_motor.launch.py
phidgets_hardware/src/: phidgets_bldc_hardware.cpp  ps4_teleop.cpp
rover_dashboard_pkg/: launch_demo.sh
rover_dashboard_pkg/esp32_relay_controller/: README.md
rover_dashboard_pkg/esp32_relay_controller/relay_controller_wifi/: relay_controller_wifi.ino
rover_dashboard_pkg/rover_dashboard/: README.md  package.xml  setup.cfg  setup.py
rover_dashboard_pkg/rover_dashboard/rover_dashboard/: dashboard.py  hardware_backend.py  shared_topics.py
