<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ahmedmegahed20142@gmail.com">ahmedtabl</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>drive_description</exec_depend>
  <exec_depend>drive_control</exec_depend>
  <exec_depend>phidgets_hardware</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
