<?xml version="1.0"?>
<package format="3">
  <name>rover_dashboard</name>
  <version>0.1.0</version>
  <description>Custom PyQt ROS 2 rover power dashboard with relay and motor telemetry integration.</description>
  <maintainer email="you@example.com">Ahmed</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-pyside6</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
